--- a/.gitattributes
+++ b/.gitattributes
@@ -7594,6 +7594,11 @@ tests/test/opt/treg3.pp svneol=native#text/plain
 tests/test/opt/treg4.pp svneol=native#text/plain
 tests/test/opt/tretopt.pp svneol=native#text/plain
 tests/test/opt/tspace.pp svneol=native#text/plain
+tests/test/opt/twpo1.pp svneol=native#text/plain
+tests/test/opt/twpo2.pp svneol=native#text/plain
+tests/test/opt/twpo3.pp svneol=native#text/plain
+tests/test/opt/twpo4.pp svneol=native#text/plain
+tests/test/opt/uwpo2.pp svneol=native#text/plain
 tests/test/packages/fcl-base/tgettext1.pp svneol=native#text/plain
 tests/test/packages/fcl-db/assertions.pas svneol=native#text/plain
 tests/test/packages/fcl-db/dbftoolsunit.pas svneol=native#text/plain
