--- a/.gitattributes
+++ b/.gitattributes
@@ -8595,6 +8595,7 @@ tests/webtbs/tw11435c.pp svneol=native#text/plain
 tests/webtbs/tw11436.pp svneol=native#text/plain
 tests/webtbs/tw1152.pp svneol=native#text/plain
 tests/webtbs/tw11543.pp svneol=native#text/plain
+tests/webtbs/tw11563.pp svneol=native#text/plain
 tests/webtbs/tw11568.pp svneol=native#text/plain
 tests/webtbs/tw1157.pp svneol=native#text/plain
 tests/webtbs/tw1157b.pp svneol=native#text/plain
