--- a/.gitattributes
+++ b/.gitattributes
@@ -7606,6 +7606,7 @@ tests/test/opt/twpo1.pp svneol=native#text/plain
 tests/test/opt/twpo2.pp svneol=native#text/plain
 tests/test/opt/twpo3.pp svneol=native#text/plain
 tests/test/opt/twpo4.pp svneol=native#text/plain
+tests/test/opt/twpo5.pp svneol=native#text/plain
 tests/test/opt/uwpo2.pp svneol=native#text/plain
 tests/test/packages/fcl-base/tgettext1.pp svneol=native#text/plain
 tests/test/packages/fcl-db/assertions.pas svneol=native#text/plain
