* Restructured makefiles for examples
git-svn-id: trunk@12385 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1389,6 +1389,8 @@ packages/fcl-fpcunit/src/xmlreporter.pas svneol=native#text/plain
 packages/fcl-fpcunit/src/xmltestreport.pp svneol=native#text/plain
 packages/fcl-image/Makefile svneol=native#text/plain
 packages/fcl-image/Makefile.fpc svneol=native#text/plain
+packages/fcl-image/examples/Makefile svneol=native#text/plain
+packages/fcl-image/examples/Makefile.fpc svneol=native#text/plain
 packages/fcl-image/examples/drawing.pp svneol=native#text/plain
 packages/fcl-image/examples/imgconv.pp svneol=native#text/plain
 packages/fcl-image/fpmake.pp svneol=native#text/plain
