--- a/.gitattributes
+++ b/.gitattributes
@@ -1761,12 +1761,15 @@ packages/gdbm/Makefile svneol=native#text/plain
 packages/gdbm/Makefile.fpc svneol=native#text/plain
 packages/gdbm/README svneol=native#text/plain
 packages/gdbm/examples/Makefile svneol=native#text/plain
+packages/gdbm/examples/Makefile.fpc svneol=native#text/plain
 packages/gdbm/examples/testgdbm.pp svneol=native#text/plain
 packages/gdbm/examples/testgdbm2.pp svneol=native#text/plain
 packages/gdbm/fpmake.pp svneol=native#text/plain
 packages/gdbm/src/gdbm.pp svneol=native#text/plain
 packages/ggi/Makefile svneol=native#text/plain
 packages/ggi/Makefile.fpc svneol=native#text/plain
+packages/ggi/examples/Makefile svneol=native#text/plain
+packages/ggi/examples/Makefile.fpc svneol=native#text/plain
 packages/ggi/examples/ggi1.pp svneol=native#text/plain
 packages/ggi/fpmake.pp svneol=native#text/plain
 packages/ggi/src/ggi.pp svneol=native#text/plain
