* Restructured makefiles for examples
git-svn-id: trunk@12389 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2528,6 +2528,8 @@ packages/gtk2/src/pango/pangoincludes.inc svneol=native#text/plain
 packages/gtk2/src/pango/pangoutils.pas svneol=native#text/plain
 packages/hash/Makefile svneol=native#text/plain
 packages/hash/Makefile.fpc svneol=native#text/plain
+packages/hash/examples/Makefile svneol=native#text/plain
+packages/hash/examples/Makefile.fpc svneol=native#text/plain
 packages/hash/examples/md5.ref svneol=native#text/plain
 packages/hash/examples/mdtest.pas svneol=native#text/plain
 packages/hash/fpmake.pp svneol=native#text/plain
