* Restructured makefiles for examples
git-svn-id: trunk@12390 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2731,6 +2731,10 @@ packages/httpd22/src/util_time.inc svneol=native#text/plain
 packages/ibase/Makefile svneol=native#text/plain
 packages/ibase/Makefile.fpc svneol=native#text/plain
 packages/ibase/README svneol=native#text/plain
+packages/ibase/examples/Makefile svneol=native#text/plain
+packages/ibase/examples/Makefile.fpc svneol=native#text/plain
+packages/ibase/examples/testib40.pp svneol=native#text/plain
+packages/ibase/examples/testib60.pp svneol=native#text/plain
 packages/ibase/fpmake.pp svneol=native#text/plain
 packages/ibase/scripts/mkdb svneol=native#text/plain
 packages/ibase/scripts/mkdb.bat svneol=native#text/plain
@@ -2739,8 +2743,6 @@ packages/ibase/src/ibase40.pp svneol=native#text/plain
 packages/ibase/src/ibase60.inc svneol=native#text/plain
 packages/ibase/src/ibase60.pp svneol=native#text/plain
 packages/ibase/src/ibase60dyn.pp svneol=native#text/plain
-packages/ibase/tests/testib40.pp svneol=native#text/plain
-packages/ibase/tests/testib60.pp svneol=native#text/plain
 packages/iconvenc/Makefile svneol=native#text/plain
 packages/iconvenc/Makefile.fpc svneol=native#text/plain
 packages/iconvenc/examples/Makefile svneol=native#text/plain
