* Restructured makefiles for examples
git-svn-id: trunk@12391 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3044,10 +3044,12 @@ packages/libc/src/xlocaleh.inc svneol=native#text/plain
 packages/libc/src/xopen_limh.inc svneol=native#text/plain
 packages/libcurl/Makefile svneol=native#text/plain
 packages/libcurl/Makefile.fpc svneol=native#text/plain
+packages/libcurl/examples/Makefile svneol=native#text/plain
+packages/libcurl/examples/Makefile.fpc svneol=native#text/plain
+packages/libcurl/examples/testcurl.pp svneol=native#text/plain
+packages/libcurl/examples/teststream.pp svneol=native#text/plain
 packages/libcurl/fpmake.pp svneol=native#text/plain
 packages/libcurl/src/libcurl.pp svneol=native#text/plain
-packages/libcurl/tests/testcurl.pp svneol=native#text/plain
-packages/libcurl/tests/teststream.pp svneol=native#text/plain
 packages/libgbafpc/Makefile svneol=native#text/plain
 packages/libgbafpc/Makefile.fpc svneol=native#text/plain
 packages/libgbafpc/examples/Makefile svneol=native#text/plain
