* Restructured makefiles for examples
git-svn-id: trunk@12392 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3102,10 +3102,12 @@ packages/libgbafpc/src/gba/pcx.inc svneol=native#text/plain
 packages/libgd/Makefile svneol=native#text/plain
 packages/libgd/Makefile.fpc svneol=native#text/plain
 packages/libgd/README svneol=native#text/plain
+packages/libgd/examples/Makefile svneol=native#text/plain
+packages/libgd/examples/Makefile.fpc svneol=native#text/plain
+packages/libgd/examples/gdtest.pp svneol=native#text/plain
+packages/libgd/examples/gdtestcgi.pp svneol=native#text/plain
 packages/libgd/fpmake.pp svneol=native#text/plain
 packages/libgd/src/gd.pp svneol=native#text/plain
-packages/libgd/tests/gdtest.pp svneol=native#text/plain
-packages/libgd/tests/gdtestcgi.pp svneol=native#text/plain
 packages/libndsfpc/Makefile svneol=native#text/plain
 packages/libndsfpc/Makefile.fpc svneol=native#text/plain
 packages/libndsfpc/examples/devkitPro/Graphics/2D/16bit_color_bmp/data/drunkenlogo.git svneol=native#text/plain
