* Restructured makefiles for examples
git-svn-id: trunk@12396 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3344,6 +3344,12 @@ packages/modplug/src/modplug.pas svneol=native#text/plain
 packages/mysql/Makefile svneol=native#text/plain
 packages/mysql/Makefile.fpc svneol=native#text/plain
 packages/mysql/README svneol=native#text/plain
+packages/mysql/examples/Makefile svneol=native#text/plain
+packages/mysql/examples/Makefile.fpc svneol=native#text/plain
+packages/mysql/examples/mysqls.c svneol=native#text/plain
+packages/mysql/examples/mysqls.pp svneol=native#text/plain
+packages/mysql/examples/testdb3.pp svneol=native#text/plain
+packages/mysql/examples/testdb4.pp svneol=native#text/plain
 packages/mysql/fpmake.pp svneol=native#text/plain
 packages/mysql/scripts/mkdb svneol=native#text/plain
 packages/mysql/scripts/rmdb svneol=native#text/plain
@@ -3371,10 +3377,6 @@ packages/mysql/src/mysql4impl.inc svneol=native#text/plain
 packages/mysql/src/mysql4types.inc svneol=native#text/plain
 packages/mysql/src/mysql50.pp svneol=native#text/plain
 packages/mysql/src/mysql50dyn.pp svneol=native#text/plain
-packages/mysql/tests/mysqls.c svneol=native#text/plain
-packages/mysql/tests/mysqls.pp svneol=native#text/plain
-packages/mysql/tests/testdb3.pp svneol=native#text/plain
-packages/mysql/tests/testdb4.pp svneol=native#text/plain
 packages/ncurses/Makefile svneol=native#text/plain
 packages/ncurses/Makefile.fpc svneol=native#text/plain
 packages/ncurses/examples/db_demo.pp svneol=native#text/plain
