* Restructured makefiles for examples
git-svn-id: trunk@12397 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3379,6 +3379,8 @@ packages/mysql/src/mysql50.pp svneol=native#text/plain
 packages/mysql/src/mysql50dyn.pp svneol=native#text/plain
 packages/ncurses/Makefile svneol=native#text/plain
 packages/ncurses/Makefile.fpc svneol=native#text/plain
+packages/ncurses/examples/Makefile svneol=native#text/plain
+packages/ncurses/examples/Makefile.fpc svneol=native#text/plain
 packages/ncurses/examples/db_demo.pp svneol=native#text/plain
 packages/ncurses/examples/edit_demo.pp svneol=native#text/plain
 packages/ncurses/examples/firework.pp svneol=native#text/plain
@@ -3395,6 +3397,7 @@ packages/ncurses/examples/t2panel.pp svneol=native#text/plain
 packages/ncurses/examples/t3form.pp svneol=native#text/plain
 packages/ncurses/examples/tbackground.pp svneol=native#text/plain
 packages/ncurses/examples/tclock.pp svneol=native#text/plain
+packages/ncurses/examples/testn.pp svneol=native#text/plain
 packages/ncurses/examples/tevent.pp svneol=native#text/plain
 packages/ncurses/examples/tmouse.pp svneol=native#text/plain
 packages/ncurses/examples/tnlshello.pp svneol=native#text/plain
@@ -3420,7 +3423,6 @@ packages/ncurses/tests/t2menu.pp svneol=native#text/plain
 packages/ncurses/tests/t3form.pp svneol=native#text/plain
 packages/ncurses/tests/tbackground.pp svneol=native#text/plain
 packages/ncurses/tests/tclock.pp svneol=native#text/plain
-packages/ncurses/tests/testn.pp svneol=native#text/plain
 packages/ncurses/tests/tevent.pp svneol=native#text/plain
 packages/ncurses/tests/tmouse.pp svneol=native#text/plain
 packages/ncurses/tests/tnlshello.pp svneol=native#text/plain
