* Restructured makefiles for examples
git-svn-id: trunk@12398 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3429,6 +3429,8 @@ packages/ncurses/tests/tnlshello.pp svneol=native#text/plain
 packages/newt/Makefile svneol=native#text/plain
 packages/newt/Makefile.fpc svneol=native#text/plain
 packages/newt/README svneol=native#text/plain
+packages/newt/examples/Makefile svneol=native#text/plain
+packages/newt/examples/Makefile.fpc svneol=native#text/plain
 packages/newt/examples/newt1.pas svneol=native#text/plain
 packages/newt/examples/newt2.pas svneol=native#text/plain
 packages/newt/examples/newt3.pas svneol=native#text/plain
