* Restructured makefiles for examples
git-svn-id: trunk@12401 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3947,6 +3947,10 @@ packages/pcap/src/pcap.pp svneol=native#text/plain
 packages/postgres/Makefile svneol=native#text/plain
 packages/postgres/Makefile.fpc svneol=native#text/plain
 packages/postgres/README svneol=native#text/plain
+packages/postgres/examples/Makefile svneol=native#text/plain
+packages/postgres/examples/Makefile.fpc svneol=native#text/plain
+packages/postgres/examples/testpg1.pp svneol=native#text/plain
+packages/postgres/examples/testpg2.pp svneol=native#text/plain
 packages/postgres/fpmake.pp svneol=native#text/plain
 packages/postgres/scripts/mkdb svneol=native#text/plain
 packages/postgres/scripts/rmdb svneol=native#text/plain
@@ -3957,8 +3961,6 @@ packages/postgres/src/postgres.pp svneol=native#text/plain
 packages/postgres/src/postgres3.pp svneol=native#text/plain
 packages/postgres/src/postgres3dyn.pp svneol=native#text/plain
 packages/postgres/src/postgres3types.inc svneol=native#text/plain
-packages/postgres/tests/testpg1.pp svneol=native#text/plain
-packages/postgres/tests/testpg2.pp svneol=native#text/plain
 packages/ptc/Makefile svneol=native#text/plain
 packages/ptc/Makefile.fpc svneol=native#text/plain
 packages/ptc/docs/AUTHORS -text
