--- a/.gitattributes
+++ b/.gitattributes
@@ -4168,6 +4168,8 @@ packages/pthreads/src/pthrlinux.inc svneol=native#text/plain
 packages/pthreads/src/pthrsnos.inc svneol=native#text/plain
 packages/pxlib/Makefile svneol=native#text/plain
 packages/pxlib/Makefile.fpc svneol=native#text/plain
+packages/pxlib/examples/Makefile svneol=native#text/plain
+packages/pxlib/examples/Makefile.fpc svneol=native#text/plain
 packages/pxlib/examples/ppxview.pp svneol=native#text/plain
 packages/pxlib/fpmake.pp svneol=native#text/plain
 packages/pxlib/src/pxlib.pp svneol=native#text/plain
