* Restructured makefiles for examples
git-svn-id: trunk@12405 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4175,11 +4175,13 @@ packages/pxlib/fpmake.pp svneol=native#text/plain
 packages/pxlib/src/pxlib.pp svneol=native#text/plain
 packages/regexpr/Makefile svneol=native#text/plain
 packages/regexpr/Makefile.fpc svneol=native#text/plain
+packages/regexpr/examples/Makefile svneol=native#text/plain
+packages/regexpr/examples/Makefile.fpc svneol=native#text/plain
+packages/regexpr/examples/testreg1.pp svneol=native#text/plain
 packages/regexpr/fpmake.pp svneol=native#text/plain
 packages/regexpr/src/old/regexpr.pp svneol=native#text/plain
 packages/regexpr/src/regex.pp svneol=native#text/plain
 packages/regexpr/src/regexpr.pp svneol=native#text/plain
-packages/regexpr/tests/testreg1.pp svneol=native#text/plain
 packages/rexx/Makefile svneol=native#text/plain
 packages/rexx/Makefile.fpc svneol=native#text/plain
 packages/rexx/examples/Makefile svneol=native#text/plain
