* Restructured makefiles for examples
git-svn-id: trunk@12406 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4233,12 +4233,14 @@ packages/sqlite/tests/testapiv3x.pp svneol=native#text/plain
 packages/svgalib/Makefile svneol=native#text/plain
 packages/svgalib/Makefile.fpc svneol=native#text/plain
 packages/svgalib/README svneol=native#text/plain
+packages/svgalib/examples/Makefile svneol=native#text/plain
+packages/svgalib/examples/Makefile.fpc svneol=native#text/plain
+packages/svgalib/examples/testvga.pp svneol=native#text/plain
+packages/svgalib/examples/vgatest.pp svneol=native#text/plain
 packages/svgalib/fpmake.pp svneol=native#text/plain
 packages/svgalib/src/svgalib.pp svneol=native#text/plain
 packages/svgalib/src/vgamouse.h svneol=native#text/plain
 packages/svgalib/src/vgamouse.pp svneol=native#text/plain
-packages/svgalib/tests/testvga.pp svneol=native#text/plain
-packages/svgalib/tests/vgatest.pp svneol=native#text/plain
 packages/symbolic/Makefile svneol=native#text/plain
 packages/symbolic/Makefile.fpc svneol=native#text/plain
 packages/symbolic/doc/optimization.txt svneol=native#text/plain
