* Restructured makefiles for examples
git-svn-id: trunk@12408 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4258,9 +4258,11 @@ packages/symbolic/src/symbolic.pas svneol=native#text/plain
 packages/symbolic/src/teval.inc svneol=native#text/plain
 packages/syslog/Makefile svneol=native#text/plain
 packages/syslog/Makefile.fpc svneol=native#text/plain
+packages/syslog/examples/Makefile svneol=native#text/plain
+packages/syslog/examples/Makefile.fpc svneol=native#text/plain
+packages/syslog/examples/testlog.pp svneol=native#text/plain
 packages/syslog/fpmake.pp svneol=native#text/plain
 packages/syslog/src/systemlog.pp svneol=native#text/plain
-packages/syslog/tests/testlog.pp svneol=native#text/plain
 packages/tcl/Makefile svneol=native#text/plain
 packages/tcl/Makefile.fpc svneol=native#text/plain
 packages/tcl/fpmake.pp svneol=native#text/plain
