* Restructured makefiles for examples
git-svn-id: trunk@12409 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4616,6 +4616,8 @@ packages/unzip/src/unzipdll.pp svneol=native#text/plain
 packages/unzip/src/ziptypes.pp svneol=native#text/plain
 packages/users/Makefile svneol=native#text/plain
 packages/users/Makefile.fpc svneol=native#text/plain
+packages/users/examples/Makefile svneol=native#text/plain
+packages/users/examples/Makefile.fpc svneol=native#text/plain
 packages/users/examples/testpass.pp svneol=native#text/plain
 packages/users/examples/testpass2.pp svneol=native#text/plain
 packages/users/examples/testuser.pp svneol=native#text/plain
