--- a/.gitattributes
+++ b/.gitattributes
@@ -4629,6 +4629,8 @@ packages/users/src/shadow.pp svneol=native#text/plain
 packages/users/src/users.pp svneol=native#text/plain
 packages/utmp/Makefile svneol=native#text/plain
 packages/utmp/Makefile.fpc svneol=native#text/plain
+packages/utmp/examples/Makefile svneol=native#text/plain
+packages/utmp/examples/Makefile.fpc svneol=native#text/plain
 packages/utmp/examples/testutmp.pp svneol=native#text/plain
 packages/utmp/fpmake.pp svneol=native#text/plain
 packages/utmp/src/utmp.pp svneol=native#text/plain
