* Restructured makefiles for examples
git-svn-id: trunk@12412 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4637,11 +4637,13 @@ packages/utmp/src/utmp.pp svneol=native#text/plain
 packages/uuid/Makefile svneol=native#text/plain
 packages/uuid/Makefile.fpc svneol=native#text/plain
 packages/uuid/README svneol=native#text/plain
+packages/uuid/examples/Makefile svneol=native#text/plain
+packages/uuid/examples/Makefile.fpc svneol=native#text/plain
+packages/uuid/examples/testlibuid.pp svneol=native#text/plain
+packages/uuid/examples/testuid.pp svneol=native#text/plain
 packages/uuid/fpmake.pp svneol=native#text/plain
 packages/uuid/src/libuuid.pp svneol=native#text/plain
 packages/uuid/src/macuuid.pp svneol=native#text/plain
-packages/uuid/tests/testlibuid.pp svneol=native#text/plain
-packages/uuid/tests/testuid.pp svneol=native#text/plain
 packages/winceunits/Makefile svneol=native#text/plain
 packages/winceunits/Makefile.fpc svneol=native#text/plain
 packages/winceunits/src/aygshell.pp svneol=native#text/plain
