* return 0 for length(pchar(0)), like Kylix does (using corrected and     multi-platform version of patch in r12461, which caused the i386 version     of fpc_pchar_length to return 0 in all cases, which used tabs, and did     not include a test case)
git-svn-id: trunk@12464 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8083,6 +8083,7 @@ tests/test/units/system/tjmp.pp svneol=native#text/plain
 tests/test/units/system/tmem.pp svneol=native#text/plain
 tests/test/units/system/todd.pp svneol=native#text/plain
 tests/test/units/system/tparam.pp svneol=native#text/plain
+tests/test/units/system/tpchlen.pp svneol=native#text/plain
 tests/test/units/system/tpi.pp svneol=native#text/plain
 tests/test/units/system/trandom.pp svneol=native#text/plain
 tests/test/units/system/trdtxt01.pp svneol=native#text/plain
