+ added initial support for the VASM assembler of VBCC fame (http://sun.hasenbraten.de/vbcc/),   because it is faster and more system conform on Amigaish systems (like MorphOS, AmigaOS4 and more) than GNU AS.   btw, these are the same reasons why FPC/MOS use VLink instead of GNU LD... + simple programs compile with it, compiler doesn't work yet. (i'm in touch with VASM maintainer to address some issues) + TODO: add a command line switch to turn it on from command line.
git-svn-id: trunk@12479 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -334,6 +334,7 @@ compiler/pexpr.pas svneol=native#text/plain
 compiler/pinline.pas svneol=native#text/plain
 compiler/pmodules.pas svneol=native#text/plain
 compiler/powerpc/agppcmpw.pas svneol=native#text/plain
+compiler/powerpc/agppcvasm.pas svneol=native#text/plain
 compiler/powerpc/aoptcpu.pas svneol=native#text/plain
 compiler/powerpc/aoptcpub.pas svneol=native#text/plain
 compiler/powerpc/aoptcpuc.pas svneol=native#text/plain
