--- a/.gitattributes
+++ b/.gitattributes
@@ -3660,6 +3660,10 @@ packages/opengl/src/glut.pp svneol=native#text/plain
 packages/opengl/src/glx.pp svneol=native#text/plain
 packages/opengl/src/tinygl.inc svneol=native#text/plain
 packages/opengl/src/tinyglh.inc svneol=native#text/plain
+packages/opengles/Makefile svneol=native#text/plain
+packages/opengles/Makefile.fpc svneol=native#text/plain
+packages/opengles/examples/glutdemoes.pp svneol=native#text/plain
+packages/opengles/src/gles11.pp svneol=native#text/plain
 packages/openssl/Makefile svneol=native#text/plain
 packages/openssl/Makefile.fpc svneol=native#text/plain
 packages/openssl/examples/Makefile svneol=native#text/plain
