+ Makefile for the examples
git-svn-id: trunk@12506 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3662,6 +3662,8 @@ packages/opengl/src/tinygl.inc svneol=native#text/plain
 packages/opengl/src/tinyglh.inc svneol=native#text/plain
 packages/opengles/Makefile svneol=native#text/plain
 packages/opengles/Makefile.fpc svneol=native#text/plain
+packages/opengles/examples/Makefile svneol=native#text/plain
+packages/opengles/examples/Makefile.fpc svneol=native#text/plain
 packages/opengles/examples/glutdemoes.pp svneol=native#text/plain
 packages/opengles/src/gles11.pp svneol=native#text/plain
 packages/openssl/Makefile svneol=native#text/plain
