--- a/.gitattributes
+++ b/.gitattributes
@@ -7669,6 +7669,7 @@ tests/test/packages/fcl-db/dbftoolsunit.pas svneol=native#text/plain
 tests/test/packages/fcl-db/tdb1.pp svneol=native#text/plain
 tests/test/packages/fcl-db/tdb2.pp svneol=native#text/plain
 tests/test/packages/fcl-db/tdb3.pp svneol=native#text/plain
+tests/test/packages/fcl-db/tdb4.pp svneol=native#text/plain
 tests/test/packages/fcl-db/toolsunit.pas svneol=native#text/plain
 tests/test/packages/fcl-registry/tregistry1.pp svneol=native#text/plain
 tests/test/packages/hash/tmdtest.pp svneol=native#text/plain
