--- a/.gitattributes
+++ b/.gitattributes
@@ -8228,6 +8228,7 @@ tests/webtbf/tw12365b.pp svneol=native#text/plain
 tests/webtbf/tw1238.pp svneol=native#text/plain
 tests/webtbf/tw1251a.pp svneol=native#text/plain
 tests/webtbf/tw1270.pp svneol=native#text/plain
+tests/webtbf/tw12933.pp svneol=native#text/plain
 tests/webtbf/tw1306.pp svneol=native#text/plain
 tests/webtbf/tw1316.pp svneol=native#text/plain
 tests/webtbf/tw1328.pp svneol=native#text/plain
