* added header files for librsvg (Free, Open Source SVG Rendering Library) * librsvg is dependant of gtk2 package
git-svn-id: trunk@12550 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3266,6 +3266,9 @@ packages/libpng/Makefile svneol=native#text/plain
 packages/libpng/Makefile.fpc svneol=native#text/plain
 packages/libpng/fpmake.pp svneol=native#text/plain
 packages/libpng/src/png.pp svneol=native#text/plain
+packages/librsvg/Makefile svneol=native#text/plain
+packages/librsvg/Makefile.fpc svneol=native#text/plain
+packages/librsvg/src/rsvg.pas svneol=native#text/plain
 packages/libxml/Makefile svneol=native#text/plain
 packages/libxml/Makefile.fpc svneol=native#text/plain
 packages/libxml/examples/Makefile svneol=native#text/plain
