--- a/.gitattributes
+++ b/.gitattributes
@@ -3976,6 +3976,9 @@ packages/postgres/src/postgres.pp svneol=native#text/plain
 packages/postgres/src/postgres3.pp svneol=native#text/plain
 packages/postgres/src/postgres3dyn.pp svneol=native#text/plain
 packages/postgres/src/postgres3types.inc svneol=native#text/plain
+packages/proj4/Makefile svneol=native#text/plain
+packages/proj4/Makefile.fpc svneol=native#text/plain
+packages/proj4/src/proj.pas svneol=native#text/plain
 packages/ptc/Makefile svneol=native#text/plain
 packages/ptc/Makefile.fpc svneol=native#text/plain
 packages/ptc/docs/AUTHORS -text
