* Changes to compiler and rtl to make it compatible with devkitARM r24 * First attempt to implement a sort of generic "gate" for adding different file access methods * Optimized heap and stack handling
git-svn-id: trunk@12562 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5707,8 +5707,10 @@ rtl/nds/classes.pp -text
 rtl/nds/cprt07.as svneol=native#text/plain
 rtl/nds/cprt09.as svneol=native#text/plain
 rtl/nds/dos.pp -text
+rtl/nds/nds.inc svneol=native#text/plain
 rtl/nds/ndsbios.inc -text
 rtl/nds/ndsbiosh.inc -text
+rtl/nds/ndsh.inc svneol=native#text/plain
 rtl/nds/prt07.as svneol=native#text/plain
 rtl/nds/prt09.as svneol=native#text/plain
 rtl/nds/sysdir.inc -text
