* Adobe Photoshop image file reader from Mattias Gaertner
git-svn-id: trunk@12577 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1427,6 +1427,7 @@ packages/fcl-image/src/fpreadjpeg.pas svneol=native#text/plain
 packages/fcl-image/src/fpreadpcx.pas svneol=native#text/plain
 packages/fcl-image/src/fpreadpng.pp svneol=native#text/plain
 packages/fcl-image/src/fpreadpnm.pp svneol=native#text/plain
+packages/fcl-image/src/fpreadpsd.pas svneol=native#text/plain
 packages/fcl-image/src/fpreadtga.pp svneol=native#text/plain
 packages/fcl-image/src/fpreadtiff.pas svneol=native#text/plain
 packages/fcl-image/src/fpreadxpm.pp svneol=native#text/plain
