* Patch from Sergei Gorelkin:   * Changed the design of input decoders so they process data by chunks     instead of char-by-char. It is much faster, and allows supporting     external pluggable decoders.   + Interface for external decoders.   * ResolvePredefined() is rewritten so it doesn't call CompareMem five     times do determine a single char.   * ParseCharRef renamed to ParseRef, because it parses entity refs as     well.   * Added guard conditions to prevent integer overflows in ParseRef.   * ContextPush(TXMLCharSource) merged into Initialize().
  xmliconv.pas is a new unit, containing an libiconv-based decoder. It depends on existing iconvenc package, and
  thus supports all platforms that are supported by iconvenc.

  xmliconv_windows.pas is the variation that allows to use libiconv functionality on Windows (It would require
  the iconv.dll to be distributed with the application, but since I haven't succeeded yet in writing a native
  Windows decoder, this is better than nothing).

git-svn-id: trunk@12582 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1661,6 +1661,8 @@ packages/fcl-xml/src/wtagsintf.inc svneol=native#text/plain
 packages/fcl-xml/src/xhtml.pp svneol=native#text/plain
 packages/fcl-xml/src/xmlcfg.pp svneol=native#text/plain
 packages/fcl-xml/src/xmlconf.pp svneol=native#text/plain
+packages/fcl-xml/src/xmliconv.pas svneol=native#text/plain
+packages/fcl-xml/src/xmliconv_windows.pas svneol=native#text/plain
 packages/fcl-xml/src/xmlread.pp svneol=native#text/plain
 packages/fcl-xml/src/xmlstreaming.pp svneol=native#text/plain
 packages/fcl-xml/src/xmlutils.pp svneol=native#text/plain
