* removed old gd headers (were alread disabled)
git-svn-id: trunk@12586 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3115,8 +3115,7 @@ packages/libgd/examples/Makefile.fpc svneol=native#text/plain
 packages/libgd/examples/gdtest.pp svneol=native#text/plain
 packages/libgd/examples/gdtestcgi.pp svneol=native#text/plain
 packages/libgd/fpmake.pp svneol=native#text/plain
-packages/libgd/src/gd.pp svneol=native#text/plain
-packages/libgd/src/libgd.pas svneol=native#text/plain
+packages/libgd/src/gd.pas svneol=native#text/plain
 packages/libndsfpc/Makefile svneol=native#text/plain
 packages/libndsfpc/Makefile.fpc svneol=native#text/plain
 packages/libndsfpc/examples/devkitPro/Graphics/2D/16bit_color_bmp/data/drunkenlogo.git svneol=native#text/plain
