* only convert character constants into widechar/widestring when assigned     to a widechar/widestring (compatible with constant string handling,     mantis #13036)
git-svn-id: trunk@12588 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8736,6 +8736,7 @@ tests/webtbs/tw12933.pp svneol=native#text/plain
 tests/webtbs/tw12942.pp svneol=native#text/plain
 tests/webtbs/tw1295.pp svneol=native#text/plain
 tests/webtbs/tw1299.pp svneol=native#text/plain
+tests/webtbs/tw13019.pp svneol=native#text/plain
 tests/webtbs/tw1310.pp svneol=native#text/plain
 tests/webtbs/tw1318.pp svneol=native#text/plain
 tests/webtbs/tw1323.pp svneol=native#text/plain
