* accept overloaded operators that return any shortstring type when needing     a conversion to a shortstring type (so an operator := that returns a     string[255] can be used to assign this type to a string[80]) (mantis     #12109)   * do not allow overloading := with a string[x<>255] as result type,     because we want one such overload to satisfy all conversions (see     previous point)
git-svn-id: trunk@12590 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8233,6 +8233,7 @@ tests/webtbf/tw11849a.pp svneol=native#text/plain
 tests/webtbf/tw11862a.pp svneol=native#text/plain
 tests/webtbf/tw11970.pp svneol=native#text/plain
 tests/webtbf/tw12075.pp svneol=native#text/plain
+tests/webtbf/tw12109a.pp svneol=native#text/plain
 tests/webtbf/tw12303.pp svneol=native#text/plain
 tests/webtbf/tw12329.pp svneol=native#text/plain
 tests/webtbf/tw12365a.cfg svneol=native#text/plain
@@ -8701,6 +8702,7 @@ tests/webtbs/tw12050b.pp svneol=native#text/plain
 tests/webtbs/tw12051.pp svneol=native#text/plain
 tests/webtbs/tw1207.pp svneol=native#text/plain
 tests/webtbs/tw12076.pp svneol=native#text/plain
+tests/webtbs/tw12109.pp svneol=native#text/plain
 tests/webtbs/tw12151.pp svneol=native#text/plain
 tests/webtbs/tw12186.pp svneol=native#text/plain
 tests/webtbs/tw12202.pp svneol=native#text/plain
