--- a/.gitattributes
+++ b/.gitattributes
@@ -5358,6 +5358,7 @@ rtl/haiku/i386/dllprt.cpp svneol=native#text/plain
 rtl/haiku/i386/func.as svneol=native#text/plain
 rtl/haiku/i386/prt0.as svneol=native#text/plain
 rtl/haiku/i386/sighnd.inc svneol=native#text/plain
+rtl/haiku/osdefs.inc svneol=native#text/plain
 rtl/haiku/osmacro.inc svneol=native#text/plain
 rtl/haiku/ossysc.inc svneol=native#text/plain
 rtl/haiku/ostypes.inc svneol=native#text/plain
@@ -5377,7 +5378,6 @@ rtl/haiku/system.pp svneol=native#text/plain
 rtl/haiku/termio.pp svneol=native#text/plain
 rtl/haiku/termios.inc svneol=native#text/plain
 rtl/haiku/termiosproc.inc svneol=native#text/plain
-rtl/haiku/tthread.inc svneol=native#text/plain
 rtl/haiku/unixsock.inc svneol=native#text/plain
 rtl/haiku/unxconst.inc svneol=native#text/plain
 rtl/haiku/unxfunc.inc svneol=native#text/plain
