* made libxml2 headers Lazarus "Codetools" compatible * prepeared headers for dynamic loading (not enabled right now)
git-svn-id: trunk@12678 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3315,11 +3315,12 @@ packages/libxml/src/uri.inc svneol=native#text/plain
 packages/libxml/src/valid.inc svneol=native#text/plain
 packages/libxml/src/xinclude.inc svneol=native#text/plain
 packages/libxml/src/xlink.inc svneol=native#text/plain
+packages/libxml/src/xml2.inc svneol=native#text/plain
 packages/libxml/src/xml2.pas svneol=native#text/plain
+packages/libxml/src/xml2dyn.pas svneol=native#text/plain
 packages/libxml/src/xmlIO.inc svneol=native#text/plain
 packages/libxml/src/xmlautomata.inc svneol=native#text/plain
 packages/libxml/src/xmlerror.inc svneol=native#text/plain
-packages/libxml/src/xmlexports.inc svneol=native#text/plain
 packages/libxml/src/xmlmemory.inc svneol=native#text/plain
 packages/libxml/src/xmlmodule.inc svneol=native#text/plain
 packages/libxml/src/xmlreader.inc svneol=native#text/plain
