+ added register keyword to Interlocked* definitions as suggested by Jonas, resolves #12255
git-svn-id: trunk@12698 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8719,6 +8719,7 @@ tests/webtbs/tw12233.pp svneol=native#text/plain
 tests/webtbs/tw12237.pp svneol=native#text/plain
 tests/webtbs/tw12242.pp svneol=native#text/plain
 tests/webtbs/tw12249.pp svneol=native#text/plain
+tests/webtbs/tw12255.pp svneol=native#text/plain
 tests/webtbs/tw1228.pp svneol=native#text/plain
 tests/webtbs/tw1229.pp svneol=native#text/plain
 tests/webtbs/tw12318.pp svneol=native#text/plain
