--- a/.gitattributes
+++ b/.gitattributes
@@ -8710,6 +8710,7 @@ tests/webtbs/tw12051.pp svneol=native#text/plain
 tests/webtbs/tw1207.pp svneol=native#text/plain
 tests/webtbs/tw12076.pp svneol=native#text/plain
 tests/webtbs/tw12109.pp svneol=native#text/plain
+tests/webtbs/tw12137.pp svneol=native#text/plain
 tests/webtbs/tw12151.pp svneol=native#text/plain
 tests/webtbs/tw12186.pp svneol=native#text/plain
 tests/webtbs/tw12202.pp svneol=native#text/plain
