* when using overloaded functions in Delphi mode without the "overload"     directive, state that "overload" is missing rather than that     overloading is disabled (mantis #10081)
git-svn-id: trunk@12723 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8220,6 +8220,7 @@ tests/webtbf/tw0890a.pp svneol=native#text/plain
 tests/webtbf/tw0893.pp svneol=native#text/plain
 tests/webtbf/tw0896.pp svneol=native#text/plain
 tests/webtbf/tw0896a.pp svneol=native#text/plain
+tests/webtbf/tw10081.pp svneol=native#text/plain
 tests/webtbf/tw10425a.pp svneol=native#text/plain
 tests/webtbf/tw10457.pp svneol=native#text/plain
 tests/webtbf/tw10833a.pp svneol=native#text/plain
