--- a/.gitattributes
+++ b/.gitattributes
@@ -6663,6 +6663,10 @@ tests/tbf/tb0212.pp svneol=native#text/plain
 tests/tbf/tb0213.pp svneol=native#text/plain
 tests/tbf/tb0214.pp svneol=native#text/plain
 tests/tbf/tb0215.pp svneol=native#text/plain
+tests/tbf/tb0215a.pp svneol=native#text/plain
+tests/tbf/tb0215b.pp svneol=native#text/plain
+tests/tbf/tb0215c.pp svneol=native#text/plain
+tests/tbf/tb0215d.pp svneol=native#text/plain
 tests/tbf/ub0115.pp svneol=native#text/plain
 tests/tbf/ub0149.pp svneol=native#text/plain
 tests/tbf/ub0158a.pp svneol=native#text/plain
