* Replaces several direct references to FNSI.QName by the NodeName property, so    that descendent classes can override the NodeName properly  * Fixed an AV when GetNodeName is called and there is no NodeName set  * Removed the THtmlCustomElement.NodeName property and override the GetNodeName    method instead. The hashtable of TDOMNode_NS is not used because    THtmlCustomElement uses a faster lookupsystem for tag/node-names  * Added a basic test for the htmlwriter unit
git-svn-id: trunk@12732 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7696,6 +7696,7 @@ tests/test/packages/fcl-db/tdb4.pp svneol=native#text/plain
 tests/test/packages/fcl-db/tdb5.pp svneol=native#text/plain
 tests/test/packages/fcl-db/toolsunit.pas svneol=native#text/plain
 tests/test/packages/fcl-registry/tregistry1.pp svneol=native#text/plain
+tests/test/packages/fcl-xml/thtmlwriter.pp svneol=native#text/plain
 tests/test/packages/hash/tmdtest.pp svneol=native#text/plain
 tests/test/packages/webtbs/tw10045.pp svneol=native#text/plain
 tests/test/packages/webtbs/tw11142.pp svneol=native#text/plain
