--- a/.gitattributes
+++ b/.gitattributes
@@ -5141,6 +5141,7 @@ rtl/beos/i386/dllprt.cpp -text
 rtl/beos/i386/func.as svneol=native#text/plain
 rtl/beos/i386/prt0.as svneol=native#text/plain
 rtl/beos/i386/sighnd.inc svneol=native#text/plain
+rtl/beos/osdefs.inc svneol=native#text/plain
 rtl/beos/osmacro.inc svneol=native#text/plain
 rtl/beos/ossysc.inc svneol=native#text/plain
 rtl/beos/ostypes.inc svneol=native#text/plain
